core/testing/snapshots/functions/map.snap
### TITLE ###
Map list with lambda
### INPUT ###
a = ["alice", "bob", "charlie"]
a.map(fn(n) n.upper()).print()
### STDOUT ###
[ "ALICE", "BOB", "CHARLIE" ]

### TITLE ###
Map list with function
### INPUT ###
a = ["alice", "bob", "charlie"]
to_upper = fn(n) n.upper()
a.map(to_upper).print()
### STDOUT ###
[ "ALICE", "BOB", "CHARLIE" ]

### TITLE ###
Map map with lambda
### INPUT ###
a = { "alice": "bobson", "charlie": "davidson" }
a.map(fn(k, v) "{k} {v}").print()
### STDOUT ###
[ "alice bobson", "charlie davidson" ]

### TITLE ###
Map map with function
### INPUT ###
a = { "alice": "bobson", "charlie": "davidson" }
joiner = fn(k, v) "{k} {v}"
a.map(joiner).print()
### STDOUT ###
[ "alice bobson", "charlie davidson" ]

### TITLE ###
Map rejects non-function second arg
### DESCRIPTION ###
Pre-Bug-3 fix the `_fn` parameter typing resolved to `any`, so map silently
accepted non-function values. After flipping K_FN_TYPE in typing_resolution,
the signature `fn(any) -> any | fn(any, any) -> any` enforces fn-only.
### INPUT ###
a = ["alice", "bob"]
a.map("not a fn")
### STDERR ###
error[RAD30001]: Argument type 'str' is not assignable to expected type 'fn(any) -> any|fn(any, any) -> any'
  --> <script>:2:7
  |
1 | a = ["alice", "bob"]
2 | a.map("not a fn")
  |       ^^^^^^^^^^
  |
   = info: rad explain RAD30001


### EXIT ###
1
